<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mychores.TaskDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/taskdetail_icon"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/laundry" />

            <TextView
                android:id="@+id/taskdetail_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:text="Walk dog"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/edit_task"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/background"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/edit" />

            <ImageButton
                android:id="@+id/delete_task"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/background"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/delete" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:backgroundTintMode="multiply"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/avg_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/clock"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="1 Hr"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/calandar"
                    android:paddingLeft="20dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:text="Today"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/creator_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="15dp"
                    android:drawableRight="@drawable/user_1"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="Marcus"
                    android:textAlignment="textEnd"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/taskdetail_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="50dp"
                    android:paddingRight="40dp"
                    android:text="Status: Regular"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/assigned_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/taskdetail_requirment"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="22sp" />

        <GridView
            android:id="@+id/taskitemlist"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:numColumns="2"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/taskdetail_notes"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="22sp"
            tools:layout_editor_absoluteY="37dp" />

        <TextView
            android:id="@+id/taskdetail_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/taskdetail_paragraph"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
